SS Labels for 800x800 images

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 Potholes/
 Rasmus/proposals/
 Robert/proposals/
+Rasmus/SS_proposals_800x800/
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
