--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@ Potholes/
 Rasmus/proposals/
 Robert/proposals/
 Rasmus/SS_proposals_800x800/
+Rasmus/tmp/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
