Saved labels for proposals to increase performance.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ Rasmus/proposals/
 Robert/proposals/
 Rasmus/SS_proposals_800x800/
 Rasmus/tmp/
+Rasmus/tmp_labeled
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
